SimpleParser/parser.output
   0  $accept : %entry% $end

   1  start : statement

   2  constant : BCONSTANT
   3           | INTCONSTANT

   4  variable : VAR

   5  parenthesage : PAR_OPEN expression PAR_CLOSE

   6  binary_operation : expression BA_ADD expression
   7                   | expression BA_SUB expression
   8                   | expression BA_MUL expression
   9                   | expression BA_DIV expression
  10                   | expression BA_MOD expression
  11                   | expression BC_EG expression
  12                   | expression BC_SUP_EG expression
  13                   | expression BC_INF_EG expression
  14                   | expression BC_SUP expression
  15                   | expression BC_INF expression
  16                   | expression BC_DIF expression

  17  ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE

  18  expression : constant
  19             | variable
  20             | parenthesage
  21             | binary_operation
  22             | ifthenelse

  23  statement : skip
  24            | assign
  25            | return_statement
  26            | seq

  27  seq : statement SEMICOLON statement

  28  assign : VAR BC_EG constant SEMICOLON

  29  return_statement : RETURN expression SEMICOLON

  30  skip : COMM_OPEN COMM_CLOSE
  31       | COMM

  32  %entry% : '\001' start

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . start  (32)

	VAR  shift 3
	RETURN  shift 4
	COMM_OPEN  shift 5
	COMM  shift 6
	.  error

	start  goto 7
	statement  goto 8
	skip  goto 9
	assign  goto 10
	return_statement  goto 11
	seq  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	assign : VAR . BC_EG constant SEMICOLON  (28)

	BC_EG  shift 13
	.  error


state 4
	return_statement : RETURN . expression SEMICOLON  (29)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 22
	binary_operation  goto 23
	ifthenelse  goto 24


state 5
	skip : COMM_OPEN . COMM_CLOSE  (30)

	COMM_CLOSE  shift 25
	.  error


state 6
	skip : COMM .  (31)

	.  reduce 31


state 7
	%entry% : '\001' start .  (32)

	.  reduce 32


state 8
	start : statement .  (1)
	seq : statement . SEMICOLON statement  (27)

	SEMICOLON  shift 26
	$end  reduce 1


state 9
	statement : skip .  (23)

	.  reduce 23


state 10
	statement : assign .  (24)

	.  reduce 24


state 11
	statement : return_statement .  (25)

	.  reduce 25


state 12
	statement : seq .  (26)

	.  reduce 26


state 13
	assign : VAR BC_EG . constant SEMICOLON  (28)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	.  error

	constant  goto 27


state 14
	constant : BCONSTANT .  (2)

	.  reduce 2


state 15
	constant : INTCONSTANT .  (3)

	.  reduce 3


state 16
	variable : VAR .  (4)

	.  reduce 4


state 17
	parenthesage : PAR_OPEN . expression PAR_CLOSE  (5)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 28
	binary_operation  goto 23
	ifthenelse  goto 24


state 18
	ifthenelse : IF . PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	PAR_OPEN  shift 29
	.  error


state 19
	expression : constant .  (18)

	.  reduce 18


state 20
	expression : variable .  (19)

	.  reduce 19


state 21
	expression : parenthesage .  (20)

	.  reduce 20


state 22
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)
	return_statement : RETURN expression . SEMICOLON  (29)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	SEMICOLON  shift 41
	.  error


state 23
	expression : binary_operation .  (21)

	.  reduce 21


state 24
	expression : ifthenelse .  (22)

	.  reduce 22


state 25
	skip : COMM_OPEN COMM_CLOSE .  (30)

	.  reduce 30


state 26
	seq : statement SEMICOLON . statement  (27)

	VAR  shift 3
	RETURN  shift 4
	COMM_OPEN  shift 5
	COMM  shift 6
	.  error

	statement  goto 42
	skip  goto 9
	assign  goto 10
	return_statement  goto 11
	seq  goto 12


state 27
	assign : VAR BC_EG constant . SEMICOLON  (28)

	SEMICOLON  shift 43
	.  error


state 28
	parenthesage : PAR_OPEN expression . PAR_CLOSE  (5)
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  shift 44
	.  error


state 29
	ifthenelse : IF PAR_OPEN . expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 45
	binary_operation  goto 23
	ifthenelse  goto 24


state 30
	binary_operation : expression BC_EG . expression  (11)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 46
	binary_operation  goto 23
	ifthenelse  goto 24


state 31
	binary_operation : expression BC_SUP_EG . expression  (12)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 47
	binary_operation  goto 23
	ifthenelse  goto 24


state 32
	binary_operation : expression BC_INF_EG . expression  (13)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 48
	binary_operation  goto 23
	ifthenelse  goto 24


state 33
	binary_operation : expression BC_SUP . expression  (14)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 49
	binary_operation  goto 23
	ifthenelse  goto 24


state 34
	binary_operation : expression BC_INF . expression  (15)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 50
	binary_operation  goto 23
	ifthenelse  goto 24


state 35
	binary_operation : expression BC_DIF . expression  (16)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 51
	binary_operation  goto 23
	ifthenelse  goto 24


state 36
	binary_operation : expression BA_ADD . expression  (6)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 52
	binary_operation  goto 23
	ifthenelse  goto 24


state 37
	binary_operation : expression BA_SUB . expression  (7)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 53
	binary_operation  goto 23
	ifthenelse  goto 24


state 38
	binary_operation : expression BA_MUL . expression  (8)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 54
	binary_operation  goto 23
	ifthenelse  goto 24


state 39
	binary_operation : expression BA_DIV . expression  (9)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 55
	binary_operation  goto 23
	ifthenelse  goto 24


state 40
	binary_operation : expression BA_MOD . expression  (10)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 56
	binary_operation  goto 23
	ifthenelse  goto 24


state 41
	return_statement : RETURN expression SEMICOLON .  (29)

	.  reduce 29


state 42
	seq : statement . SEMICOLON statement  (27)
	seq : statement SEMICOLON statement .  (27)

	.  reduce 27


state 43
	assign : VAR BC_EG constant SEMICOLON .  (28)

	.  reduce 28


state 44
	parenthesage : PAR_OPEN expression PAR_CLOSE .  (5)

	.  reduce 5


state 45
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)
	ifthenelse : IF PAR_OPEN expression . PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  shift 57
	.  error


state 46
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression BC_EG expression .  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  reduce 11
	BRACKET_CLOSE  reduce 11
	SEMICOLON  reduce 11


state 47
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression BC_SUP_EG expression .  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  reduce 12
	BRACKET_CLOSE  reduce 12
	SEMICOLON  reduce 12


state 48
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression BC_INF_EG expression .  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  reduce 13
	BRACKET_CLOSE  reduce 13
	SEMICOLON  reduce 13


state 49
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression BC_SUP expression .  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  reduce 14
	BRACKET_CLOSE  reduce 14
	SEMICOLON  reduce 14


state 50
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression BC_INF expression .  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  reduce 15
	BRACKET_CLOSE  reduce 15
	SEMICOLON  reduce 15


state 51
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)
	binary_operation : expression BC_DIF expression .  (16)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	PAR_CLOSE  reduce 16
	BRACKET_CLOSE  reduce 16
	SEMICOLON  reduce 16


state 52
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression BA_ADD expression .  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	BC_EG  reduce 6
	BC_SUP_EG  reduce 6
	BC_INF_EG  reduce 6
	BC_SUP  reduce 6
	BC_INF  reduce 6
	BC_DIF  reduce 6
	BA_ADD  reduce 6
	BA_SUB  reduce 6
	PAR_CLOSE  reduce 6
	BRACKET_CLOSE  reduce 6
	SEMICOLON  reduce 6


state 53
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression BA_SUB expression .  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	BC_EG  reduce 7
	BC_SUP_EG  reduce 7
	BC_INF_EG  reduce 7
	BC_SUP  reduce 7
	BC_INF  reduce 7
	BC_DIF  reduce 7
	BA_ADD  reduce 7
	BA_SUB  reduce 7
	PAR_CLOSE  reduce 7
	BRACKET_CLOSE  reduce 7
	SEMICOLON  reduce 7


state 54
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression BA_MUL expression .  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	.  reduce 8


state 55
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression BA_DIV expression .  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	.  reduce 9


state 56
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression BA_MOD expression .  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)

	.  reduce 10


state 57
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE . BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	BRACKET_OPEN  shift 58
	.  error


state 58
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN . expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 59
	binary_operation  goto 23
	ifthenelse  goto 24


state 59
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression . BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	BRACKET_CLOSE  shift 60
	.  error


state 60
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE . ELSE BRACKET_OPEN expression BRACKET_CLOSE  (17)

	ELSE  shift 61
	.  error


state 61
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE . BRACKET_OPEN expression BRACKET_CLOSE  (17)

	BRACKET_OPEN  shift 62
	.  error


state 62
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN . expression BRACKET_CLOSE  (17)

	BCONSTANT  shift 14
	INTCONSTANT  shift 15
	VAR  shift 16
	PAR_OPEN  shift 17
	IF  shift 18
	.  error

	constant  goto 19
	variable  goto 20
	parenthesage  goto 21
	expression  goto 63
	binary_operation  goto 23
	ifthenelse  goto 24


state 63
	binary_operation : expression . BA_ADD expression  (6)
	binary_operation : expression . BA_SUB expression  (7)
	binary_operation : expression . BA_MUL expression  (8)
	binary_operation : expression . BA_DIV expression  (9)
	binary_operation : expression . BA_MOD expression  (10)
	binary_operation : expression . BC_EG expression  (11)
	binary_operation : expression . BC_SUP_EG expression  (12)
	binary_operation : expression . BC_INF_EG expression  (13)
	binary_operation : expression . BC_SUP expression  (14)
	binary_operation : expression . BC_INF expression  (15)
	binary_operation : expression . BC_DIF expression  (16)
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression . BRACKET_CLOSE  (17)

	BC_EG  shift 30
	BC_SUP_EG  shift 31
	BC_INF_EG  shift 32
	BC_SUP  shift 33
	BC_INF  shift 34
	BC_DIF  shift 35
	BA_ADD  shift 36
	BA_SUB  shift 37
	BA_MUL  shift 38
	BA_DIV  shift 39
	BA_MOD  shift 40
	BRACKET_CLOSE  shift 64
	.  error


state 64
	ifthenelse : IF PAR_OPEN expression PAR_CLOSE BRACKET_OPEN expression BRACKET_CLOSE ELSE BRACKET_OPEN expression BRACKET_CLOSE .  (17)

	.  reduce 17


34 terminals, 14 nonterminals
33 grammar rules, 65 states
